# DataStructures

./: .gitignore  CMakeLists.txt  detection.hpp  flat_sequence_set.hpp  inline_vector.hpp  inline_vector_iterator.hpp  local_buffered_allocator.hpp  local_buffered_resource.hpp  span.hpp  static_vector.hpp  utility.hpp
tests/: inline_vector.t.cpp  inline_vector_iterator.t.cpp  span.t.cpp
